# DataLoggerPublic

./: CMakeLists.txt  README.md
components/button/: CMakeLists.txt  button.c  button.h  button_task.cpp  button_task.hpp
components/dht11/: CMakeLists.txt  dht11.c  dht11.h  dht11_task.cpp  dht11_task.hpp
components/irdecoder/: CMakeLists.txt  irdecoder.c  irdecoder.h  irdecoder_task.cpp  irdecoder_task.hpp
components/lcd/: CMakeLists.txt  lcd_i2c.c  lcd_i2c.h  lcd_task.cpp  lcd_task.hpp
components/speaker/: CMakeLists.txt  audio_data_generator.py  speaker.c  speaker.h  speaker_task.cpp  speaker_task.hpp
components/statusled/: CMakeLists.txt  statusled.c  statusled.h
components/timeset/: CMakeLists.txt  timeset.c  timeset.h
components/webserver/: CMakeLists.txt  index.html  script.js  style.css  webserver.cpp  webserver.hpp
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
main/: CMakeLists.txt  main.cpp
